--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,7 @@ body {
   line-height: 1.6;
   overflow-x: hidden;
 }
-header img {
-  height: 150px;        
-  width: auto;          
-  margin-right: 50px;
-  border-radius: 35px;  
-  object-fit: contain;
-}
+
 
 /* ===========================
    HEADER
@@ -47,9 +41,20 @@ header h1 {
   flex-wrap: wrap; /* makes it drop on mobile */
 }
 
-header h1 img {
+header img {
   width: 120px;
   height: 120px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 10px;
+}
+
+@media (max-width: 600px) {
+  header img {
+    width: 90px;
+    height: 90px;
+    margin-right: 0;
+  }
 }
 
 header h1 span {
